    &#8226; Themers can now theme the action bar<br/>
    &#8226; Themers can now change the background for the windows<br/>
    &#8226; Live streaming should now preform a background refresh to avoid missing tweets if your data connection changes<br/>
    &#8226; Better organization of settings<br/>
    &#8226; Some support for ow.ly images in-line<br/>
<br/>

<b>IMPROVED:</b><br/>
    &#8226; Super smooth scrolling optimizations<br/>
    &#8226; Higher quality profile pictures<br/>
    &#8226; Management of Talon Pull and keeping it active<br/>
    &#8226; Remade the tweet viewer layout<br/>
    &#8226; Much better image sizing on tweet viewer<br/>
    &#8226; Photo viewer tweeks<br/>
    &#8226; Changed the conversation and discussion style<br/>
    &#8226; Opening notifications will now take you to the correct place<br/>
    &#8226; Auto-complete of users. Opening their profile will now make them searchable<br/>
    &#8226; Much more efficient and useful highlighting of users, hashtags, and links<br/>
    &#8226; Ability to open retweeters profile when viewing a retweet<br/>
    &#8226; Displaying links on timeline<br/>
    &#8226; Uploading new profile and banner pictures<br/>
    &#8226; Don't blur the banner picture in the drawer. Will have to clear cache for this to take effect<br/>
    &#8226; Displaying and sharing Twitter picture links<br/>
    &#8226; Hashtag muting support, works on mentions now too<br/>
    &#8226; Set up so themers could use a transparent action bar if they would like<br/>
    &#8226; Retweets from Talon Pull in interactions drawer, they now stack on top of each other instead of creating an instance for every new one.<br/>
    &#8226; Theme selection<br/>
    &#8226; Cleaned up advanced settings<br/>
    &#8226; User names in action bar on profile viewer<br/>
    &#8226; Better management of live streaming unread count<br/>
    &#8226; Management of widget updates<br/>
    &#8226; A bit larger auto-complete box<br/>
<br/>