@@ -544,5 +544,7 @@
     <string name="other_links">Other Links</string>
     <string name="display_options">Display Options</string>
     <string name="third_party_services">Third Party Services</string>
+    <string name="open_keyboard">Auto-Open Keyboard</string>
+    <string name="open_keyboard_summary">Automatically open the keyboard to reply in the tweet viewer</string>
 
 </resources>
